--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,11 @@
     src: local('Material Icons'), local('MaterialIcons-Regular'), url("../font/MaterialIcons-Regular.woff2") format('woff2'), url("../font/MaterialIcons-Regular.woff") format('woff'), url("../font/MaterialIcons-Regular.ttf") format('truetype');
 }
 
+main {
+    min-width: 264px;
+    /*248*/
+}
+
 .material-icons {
     font-family: 'Material Icons';
     font-weight: normal;
