--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 html {
-    /*font-size: 3vmin;*/
+    /*font-size: 2.5vmin;*/
 }
 
 body {
@@ -183,477 +183,6 @@ ul.side-nav.fixed li.logo img {
     width: 10vw;
 }
 
-.collection {}
-
-
-/*.collection .collection-item.avatar .circle {
-    width: 32px;
-    height: 32px;
-    left: 16px;
-}*/
-
-.collection img {
-    position: absolute;
-    top: calc(50% - 8px);
-    left: 8px;
-    overflow: hidden;
-    display: inline-block;
-    vertical-align: middle;
-    height: 16px;
-    width: 16px;
-    margin: 0 auto;
-}
-
-.input-field {
-    position: relative;
-    /*font-size: 22px !important;*/
-    margin-top: .5rem !important;
-}
-
-.input-field button {
-    position: relative;
-    font-size: 12px !important;
-}
-
-#master {
-    font-size: 32px !important;
-    border-color: #fff !important;
-}
-
-.domainPassword {
-    font-size: 22px !important;
-    border-color: #ff6f00 !important;
-}
-
-.masterpassword {
-    /*margin: 0;*/
-    /*padding: 1vmin 0;*/
-    /*border-color: #fff !important;*/
-    /*font-size: 1.6em;*/
-    /*font-weight: bold;*/
-}
-
-
-/* label color */
-
-.input-field.masterPassword label {
-    color: #ffffff;
-}
-
-
-/* label focus color */
-
-.input-field.masterPassword input[type=text]:focus+label {
-    color: #ffffff;
-}
-
-
-/* label underline focus color */
-
-.input-field.masterPassword input[type=text]:focus {
-    border-bottom: 1px solid #ffffff;
-    box-shadow: 0 1px 0 0 #ffffff;
-}
-
-
-/* valid color */
-
-.input-field.masterPassword input[type=text].valid {
-    border-bottom: 1px solid #ffffff;
-    box-shadow: 0 1px 0 0 #ffffff;
-}
-
-
-/* invalid color */
-
-.input-field.masterPassword input[type=text].invalid {
-    border-bottom: 1px solid #ffffff;
-    box-shadow: 0 1px 0 0 #ffffff;
-}
-
-
-/* icon prefix focus color */
-
-.input-field.masterPassword .prefix.active {
-    color: #ffffff;
-}
-
-[type="checkbox"]:checked+label::before {
-    top: -4px;
-    left: -3px;
-    width: 12px;
-    height: 22px;
-    border-width: 2px;
-    border-style: solid;
-    border-color: transparent #ffffff #ffffff transparent;
-    transform: rotate(40deg);
-    transform-origin: 100% 100% 0px;
-}
-
-
-/*body {
-  height: 100%;
-  width: 100%;
-  background: rgb(25, 175, 250);
-  background-image: linear-gradient( rgb(25, 175, 250) 50%, rgb(100, 175, 250) );
-  color: rgb(255,255,255);
-  margin: 0vmin auto;
-  padding: 0;
-  font-family: "Roboto", "Arial", sans-serif;
-  line-height: 120%;
-  overflow: hidden;
-  text-rendering: geometricPrecision;
-  -webkit-font-smoothing: antialiased;
-}*/
-
-
-/*.masterpass {
-  height: 20vmin;
-  width: 100%;
-  background: rgb(255,255,255);
-  padding-top:10vmin;
-
-}*/
-
-
-/*input, label {
-  border-color: rgb(255,255,255) !important;
-  color: rgb(255,255,255) !important;
-}
-input{
-  background-color: rgba(255,255,255,0.25) !important;
-}*/
-
-
-/* label color * /
-   .input-field label {
-     color: rgb(255,255,255);
-   }
-   /* label focus color * /
-   .input-field input[type=text]:focus + label {
-     color: rgb(255,255,255);
-   }
-   /* label underline focus color * /
-   .input-field input[type=text]:focus {
-     border-bottom: 1px solid rgb(255,255,255);
-     box-shadow: 0 1px 0 0 rgb(255,255,255);
-   }
-   /* valid color * /
-   .input-field input[type=text].valid {
-     border-bottom: 1px solid rgb(255,255,255);
-     box-shadow: 0 1px 0 0 rgb(255,255,255);
-   }
-   /* invalid color * /
-   .input-field input[type=text].invalid {
-     border-bottom: 1px solid rgb(255,255,255);
-     box-shadow: 0 1px 0 0 rgb(255,255,255);
-   }
-   /* icon prefix focus color * /
-   .input-field .prefix.active {
-     color: rgb(255,255,255);
-   }
-
-
-/** ** /
-.cloud {
-  position: relative;
-  width: 437.55px;
-  height: 300px;
-  margin: 10px auto;
-}
-.cloud:before {
-  content: "";
-  position: absolute;
-  left: 0px;
-  bottom: 0px;
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  background-color: transparent;
-  box-shadow: 62.5px -75px 0px -12.5px rgb(255,255,255), 187.5px -75px 0px 37.5px rgb(255,255,255);
-  animation: cloudy 10s ease infinite;
-}
-.cloud:after {
-  content: "";
-  position: absolute;
-  left: 0px;
-  bottom: 0px;
-  width: 437.55px;
-  height: 150px;
-  background-color: rgb(255,255,255);
-  border-radius: 150px;
-}
-  @keyframes cloudy {
-    0%, 100% {
-      box-shadow: 62.5px -75px 0px -12.5px rgb(255,255,255), 187.5px -75px 0px 37.5px rgb(255,255,255);
-    }
-    33% {
-      box-shadow: 50px -81.25677px 0px -18.75px rgb(255,255,255), 168.75px -62.5px 0px 50px rgb(255,255,255);
-    }
-    66% {
-      box-shadow: 75px -68.74427px 0px -6.25px rgb(255,255,255), 206.25px -87.51459px 0px 25px rgb(255,255,255);
-    }
-  }
-/** ** /
-.ring {
-  width: 192px;
-  height: 192px;
-  z-index: 1;
-  border-radius: 50%;
-  border: 1px solid #595959;
-  background: #fff;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  box-shadow: inset 0 -8px 0 0 #d9d9d9 ,inset 0 0 0 9px #fff,inset 0 5px 0 14px #d9d9d9,inset 0 0 0 100px #fff;
-}
-.ring:before, .ring0:after {
-  content: "";
-  display: block;
-  position: absolute;
-}
-.ring:before {
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-  border: 1px solid #1364ba;
-  background: #f2f2f2;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  box-shadow: inset 0 3px 0 0 #cecece ,0 0 0 2px #268ffb,0 2px 0 4px #57abfc,0 0 0 16px #268ffb,0 0 0 17px #042b51;
-  z-index: -1;
-}
-.ring:after {
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
-  background: #d9d9d9;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  box-shadow: inset 0 3px 0 0 #c2c2c2, 0 2px 0 1px #fff;
-  z-index: -1;
-}
-
-.hole {
-  width: 25px;
-  height: 80px;
-  background: #666666;
-  box-shadow: inset 0 4px 0 4px #333,0 2px 0 0 #fff;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-.hole:before, .hole:after {
-  content: "";
-  display: block;
-  position: absolute;
-}
-.hole:before {
-  width: 10px;
-  height: 10px;
-  background: #d9d9d9;
-  -webkit-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-          transform: rotate(45deg);
-  position: absolute;
-  top: 25px;
-  left: -6px;
-  box-shadow: 0 -2px 0 0px #fff,0 -3px 0 0 #333,4px -2px 0 1px #333;
-}
-.hole:after {
-  width: 10px;
-  height: 10px;
-  background: #d9d9d9;
-  -webkit-transform: rotate(-45deg);
-      -ms-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-  position: absolute;
-  top: 48px;
-  right: -6px;
-  box-shadow: 0 -2px 0 0px #fff,0 -3px 0 0 #333,-4px -2px 0 1px #333;
-}
-
-/*
-.material-menu-wrapper {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  height: 100vh;
-  width: 40vw;
-  overflow: hidden;
-}
-
-.material-menu {
-  position: relative;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  background: transparent;
-}
-
-.material-btn {
-  will-change: transform;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  position: absolute;
-  z-index: 1;
-  bottom: 20px;
-  right: 20px;
-  width: 75px;
-  height: 75px;
-  background: transparent;
-  cursor: pointer;
-}
-.material-btn.active:before {
-  transform: scale(18);
-}
-@media (min-height: 800px) {
-  .material-btn.active:before {
-    transform: scale(25);
-  }
-}
-.material-btn:active:before {
-  opacity: 0.75;
-}
-.material-btn:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  width: 75px;
-  height: 75px;
-  background: white;
-  border-radius: 50%;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
-  cursor: pointer;
-  transform-origin: center 70%;
-  transform: scale(1);
-  transition: all 0.35s ease-out;
-}
-
-.material-content {
-  padding: 10% 15%;
-  position: absolute;
-  z-index: 3;
-  top: 0;
-  right: 0;
-}
-
-nav ul {
-  list-style-type: none;
-  padding: 0;
-  text-align: right;
-}
-nav li {
-  will-change: transform, opacity;
-  margin: 25px 0;
-  transform: translateY(100px);
-  opacity: 0;
-  transition: all 0.4s ease-out;
-}
-nav li.active {
-  transform: translateY(0);
-  opacity: 1;
-}
-nav li:nth-child(1) {
-  transition-delay: 0.1s;
-}
-nav li:nth-child(2) {
-  transition-delay: 0.2s;
-}
-nav li:nth-child(3) {
-  transition-delay: 0.3s;
-}
-nav li:nth-child(4) {
-  transition-delay: 0.4s;
-}
-nav a {
-  text-decoration: none;
-  font-size: 5vw;
-  color: tomato;
-  font-weight: 300;
-}
-
-.material-hamburger {
-  transition: all .3s ease-out;
-}
-.material-hamburger .material-patty {
-  will-change: transform, opacity;
-  width: 32px;
-  height: 3px;
-  margin: 0 0 6px 0;
-  background: #333333;
-  opacity: 1;
-  transform: translate(0) rotate(0deg);
-  transition: all .2s ease-out;
-}
-.material-hamburger .material-patty:last-child {
-  margin-bottom: 0;
-}
-.material-hamburger.material-close {
-  transform: rotate(-180deg);
-}
-.material-hamburger.material-close .material-patty:nth-child(1) {
-  transform: translate(-10px, 4px) rotate(-45deg) scale(0.5, 1);
-}
-.material-hamburger.material-close .material-patty:nth-child(3) {
-  transform: translate(-10px, -4px) rotate(45deg) scale(0.5, 1);
-}
-
-main {
-  will-change: transform, opacity;
-  width: 80vw;
-  height: 100vw;
-  padding: 10vw;
-  overflow: hidden;
-  transition: all .35s ease-out;
-}
-main.active {
-  opacity: 0;
-  transform: translate(-700px, 0px);
-}
-main p {
-  color: white;
-  font-size: 4vw;
-  font-weight: 300;
-}
-main p .highlight {
-  background: white;
-  color: tomato;
-  font-size: 4vw;
-}
-
-/** **/
-
-
-/*.required {
-	font-weight: bold;
-	color: #FF003B;
-	background:rgba(255,0,59, 0.8) !important;
-	border: 1px solid rgba(255,0,59, 0.8);
-	box-shadow: rgba(255,0,59, 0.8) 0px 0px 12px;
-	-moz-box-shadow: rgba(255,0,59, 0.8) 0px 0px 12px;
-	-webkit-box-shadow: rgba(255,0,59, 0.8) 0px 0px 12px;
-	cursor:text;
-}*/
-
 .fieldOff {
     opacity: 0.2;
     filter: alpha(opacity=20);
@@ -681,6 +210,20 @@ main p .highlight {
 
 .collapsible {
     margin: 1px !important;
+}
+
+.masterPassword,.masterPassword input,.masterPassword label {
+    font-size: 105% !important;
+    color: #fff !important;
+    border-color:  #fff !important;
+}
+.masterPassword input {
+    font-size: 200% !important;
+}
+
+.domainPassword {
+    font-size: 150% !important;
+    border-color: #ffc107 !important;
 }
 
 .input-field {}
