--- a/css/app.css
+++ b/css/app.css
@@ -3,7 +3,17 @@
 ::-webkit-textfield-decoration-container,
 ::-webkit-caps-lock-indicator,
 ::-ms-clear,
-::-ms-reveal {
+::-ms-reveal,
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus
+input:-webkit-autofill, 
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
     display: none;
     visibility: hidden;
     pointer-events: none;
