--- a/css/app.css
+++ b/css/app.css
@@ -35,22 +35,22 @@ html {
 }
 
 body {
-    /* display: flex;
+    display: flex;
     min-height: 100vh;
-    flex-direction: column; */
+    flex-direction: column;
+    overscroll-behavior-y: contain;
 }
 
 html, body {
   position: fixed;
-  overflow: hidden;
 }
 
-.mainwrapper {
+/* .mainwrapper {
     width: 100vw;
     height: 100vh;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
-  }
+  } */
 
 header,
 main,
